--- a/Stream 2/Back End Development/Final Project/templates/index.html
+++ b/Stream 2/Back End Development/Final Project/templates/index.html
@@ -1,21 +1,16 @@
-{%  extends "layout.html" %}
+{% extends "layout.html" %}
 
 <!-- CSS linking begin -->
 {% block css_linking %}
-    <link rel="stylesheet" href="{{ url_for ('static', filename='lib/css/keen-dashboards.css')}}">
-    <link rel="stylesheet" href="{{ url_for ('static', filename='lib/css/dc.css')}}">
-    <link rel="stylesheet" href="{{ url_for ('static', filename='lib/css/introjs.css')}}">
-    <link rel="stylesheet" href="{{ url_for ('static', filename='css/custom.css')}}">
-{%  endblock %}
+    <link rel="stylesheet" href="{{ url_for ('static', filename='lib/css/keen-dashboards.css') }}">
+    <link rel="stylesheet" href="{{ url_for ('static', filename='lib/css/dc.css') }}">
+    <link rel="stylesheet" href="{{ url_for ('static', filename='lib/css/introjs.css') }}">
+    <link rel="stylesheet" href="{{ url_for ('static', filename='css/custom.css') }}">
+{% endblock %}
 <!-- CSS linking end -->
 
 <!-- content begin -->
 {% block content %}
-    <!-- Page Title Begins -->
-    <div class="col-sm-12 main">
-        <h1 class="page-header">Avengers</h1>
-        <!-- Page Title Ends -->
-
         <div class="col-sm-12">
             <div class="row">
                 <!-- Year Menu Select Begin -->
@@ -56,7 +51,8 @@
                     </div>
                 </div>
                 <!-- URL Menu Select End -->
-
+            </div>
+            <div class="row">
                 <!-- Gender Chart Begin -->
                 <div class="col-sm-4">
                     <div class="chart-wrapper text-center">
@@ -64,7 +60,7 @@
                             Gender
                         </div>
                         <div class="chart-stage">
-                            <div id="gender-chart"></div>
+                            <div id="gender-row-chart"></div>
                         </div>
                     </div>
                 </div>
@@ -77,7 +73,7 @@
                             Honorary Chart
                         </div>
                         <div class="chart-stage">
-                            <div id="honorary-chart"></div>
+                            <div id="honorary-pie-chart"></div>
                         </div>
                     </div>
                 </div>
@@ -116,7 +112,8 @@
                     </div>
                 </div>
                 <!-- Metric 2 -->
-
+            </div>
+            <div class="row">
                 <!-- Year Chart Begin -->
                 <div class="col-sm-6">
                     <div class="chart-wrapper text-center">
@@ -124,7 +121,7 @@
                             Number of Years.
                         </div>
                         <div class="chart-stage">
-                            <div id="year-chart"></div>
+                            <div id="year-bar-chart"></div>
                         </div>
                     </div>
                 </div>
@@ -142,7 +139,8 @@
                     </div>
                 </div>
                 <!-- Current Bar Chart End -->
-
+            </div>
+            <div class="row">
                 <!-- menu select -->
                 <div class="col-sm-12">
                     <div class="chart-wrapper text-center">
@@ -150,27 +148,30 @@
                             URL Table
                         </div>
                         <div class="chart-stage">
-                            <div id="url-table-data"></div>
+                            <div class="table-wrapper">
+                                <div id="url-table-data"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <!-- menu select -->
             </div>
+            <!-- menu select -->
         </div>
+    </div>
     </div>
 {% endblock %}
 <!-- content end -->
 
 <!-- JS linking -->
 {% block js_linking %}
-    <script src="{{ url_for ('static', filename='lib/js/crossfilter.js')}}"></script>
-    <script src="{{ url_for ('static', filename='lib/js/d3.js')}}"></script>
-    <script src="{{ url_for ('static', filename='lib/js/dc.js')}}"></script>
-    <script src="{{ url_for ('static', filename='lib/js/queue.js')}}"></script>
-    <script src="{{ url_for ('static', filename='lib/js/keen.min.js')}}"></script>
-    <script src="{{ url_for ('static', filename='lib/js/intro.js')}}"></script>
-    <script src="{{ url_for ('static', filename='js/graph.js')}}"></script>
-    <script src="{{ url_for ('static', filename='js/url_table_data.js')}}"></script>
-    <script src="{{ url_for ('static', filename='js/random_image_loader.js')}}"></script>
+    <script src="{{ url_for ('static', filename='lib/js/crossfilter.js') }}"></script>
+    <script src="{{ url_for ('static', filename='lib/js/d3.js') }}"></script>
+    <script src="{{ url_for ('static', filename='lib/js/dc.js') }}"></script>
+    <script src="{{ url_for ('static', filename='lib/js/queue.js') }}"></script>
+    <script src="{{ url_for ('static', filename='lib/js/keen.min.js') }}"></script>
+    <script src="{{ url_for ('static', filename='lib/js/intro.js') }}"></script>
+    <script src="{{ url_for ('static', filename='js/graph.js') }}"></script>
+    <script src="{{ url_for ('static', filename='js/url_table_data.js') }}"></script>
+    <script src="{{ url_for ('static', filename='js/random_image_loader.js') }}"></script>
 {% endblock %}
 <!-- JS linking end -->
