css refactor, added responsive breakpoints, margins for top and bootom of container to stop nav and footers overlapping the content, general housekeeping, git ignore in the stream 2 final as it has its own heroku repo

--- a/Stream 2/Back End Development/Final Project/templates/layout.html
+++ b/Stream 2/Back End Development/Final Project/templates/layout.html
@@ -48,7 +48,7 @@
 
 <body id="container" class="application">
 <!-- navigation begin -->
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
         <!-- Navbar Header/Brand -->
         <div class="navbar-header">
