--- a/Stream 2/Back End Development/Final Project/templates/layout.html
+++ b/Stream 2/Back End Development/Final Project/templates/layout.html
@@ -22,13 +22,13 @@
     <link rel="stylesheet" href="{{ url_for ('static', filename='lib/css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css">
 
+    <!-- custom stylesheet/override -->
+    <link rel="stylesheet" href="{{ url_for ('static', filename='css/style.css') }}">
+
     <!-- link the css for the dashboard class (and in future other classes in different html files -->
     {% block css_linking %}
     {% endblock %}
     <!-- CSS Linking end -->
-
-    <!-- custom stylesheet/override -->
-    <link rel="stylesheet" href="{{ url_for ('static', filename='css/style.css') }}">
 
     <!------------------------------- Compatibility linking ------------------------------------->
 
@@ -36,14 +36,15 @@
     <link rel="stylesheet" href="{{ url_for ('static', filename='lib/css/ie10-viewport-bug-workaround.css') }}">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="{{ url_for ('static', filename='js/ie8-responsive-file-warning.js')}}"></script>
-    <![endif]-->
+    <!--[if lt IE 9]>
+    <script src="{{ url_for ('static', filename='js/ie8-responsive-file-warning.js') }}"></script>
+    <![endif]>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <!--[endif]-->
 </head>
 
 <body id="container" class="application">
@@ -52,8 +53,9 @@
     <div class="container-fluid">
         <!-- Navbar Header/Brand -->
         <div class="navbar-header">
-            <a class="navbar-brand" href="./">
-                <img alt="Graph" src="{{ url_for ('static', filename='favicon/favicon.ico') }}"> Avengers Data Dashboard
+            <a class="navbar-brand" id='step1' href="./">
+                <img alt="Graph" src="{{ url_for ('static', filename='favicon/favicon.ico') }}"> Avengers
+                Data Dashboard
             </a>
         </div>
         <!-- Navbar Header/Brand End -->
@@ -61,7 +63,16 @@
         <!-- Navbar Links -->
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="./"><span class="glyphicon glyphicon-dashboard"></span> Dashboard</a></li>
+                <li><a href="./" id="step2"><span class="glyphicon glyphicon-dashboard"></span> Dashboard</a></li>
+            </ul>
+            <ul class="nav navbar-right">
+                <li>
+                    <button type="button" class="btn navbar-btn btn-danger"
+                            onclick="$('#tour-button').hide();" id="tour-button"
+                            value="Start Tour">
+                        Start Tour
+                    </button>
+                </li>
             </ul>
         </div>
         <!-- Navbar Links End -->
@@ -73,10 +84,12 @@
 <div id="outer" class="container-fluid">
     <div class="row">
 
+        <!-- Custom Loading Screen & Loading Circle Begin-->
         <div id="loading-screen">
             <h1>Loading...</h1>
             <div id="loading-circle"></div>
         </div>
+        <!-- Custom Loading Screen & Loading Circle End-->
 
         <! -- Inject Content -->
         {% block content %}
