added information for the intro.js tour on each dashboard element

--- a/Stream 2/Back End Development/Final Project/templates/layout.html
+++ b/Stream 2/Back End Development/Final Project/templates/layout.html
@@ -67,9 +67,7 @@
             </ul>
             <ul class="nav navbar-right">
                 <li>
-                    <button type="button" class="btn navbar-btn btn-danger"
-                            onclick="$('#tour-button').hide();" id="tour-button"
-                            value="Start Tour">
+                    <button type="button" class="btn navbar-btn btn-danger" id="tour-button" value="Start Tour">
                         Start Tour
                     </button>
                 </li>
