--- a/Stream 2/Back End Development/Final Project/templates/layout.html
+++ b/Stream 2/Back End Development/Final Project/templates/layout.html
@@ -53,6 +53,13 @@
     <div class="container-fluid">
         <!-- Navbar Header/Brand -->
         <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
             <a class="navbar-brand" id='step1' href="./">
                 <img alt="Graph" src="{{ url_for ('static', filename='favicon/favicon.ico') }}"> Avengers
                 Data Dashboard
