--- a/Stream 2/Back End Development/Final Project/templates/index.html
+++ b/Stream 2/Back End Development/Final Project/templates/index.html
@@ -87,14 +87,7 @@
                     <div class="chart-title">
                         Total Number of Years
                     </div>
-                    <div class="chart-stage" style=" background: #33CC99;
-                             position: relative;
-                             font-size: 29px;
-                             color: white;
-                             vertical-align: middle;
-                             text-align: center;
-                             padding-top: 12px;
-                             padding-bottom: 0;">
+                    <div class="chart-stage">
 
                         <div id="years-nd"></div>
                     </div>
