--- a/Stream 2/Back End Development/Final Project/static/css/custom.css
+++ b/Stream 2/Back End Development/Final Project/static/css/custom.css
@@ -86,7 +86,13 @@ table {
     #years-nd,
     #appearances-nd {
         font-size: 30px;
-        color: #7a7a7a;
+        color: #fff;
+        font-weight: bold;
+        position: relative;
+        vertical-align: middle;
+        text-align: center;
+        padding-top: 6px;
+        padding-bottom: 0;
     }
 
     .dc-chart g.row text {
@@ -122,7 +128,13 @@ table {
     #years-nd,
     #appearances-nd {
         font-size: 40px;
-        color: #7a7a7a;
+        color: #fff;
+        font-weight: bold;
+        position: relative;
+        vertical-align: middle;
+        text-align: center;
+        padding-top: 8px;
+        padding-bottom: 0;
     }
 
     .dc-chart g.row text {
@@ -158,7 +170,13 @@ table {
     #years-nd,
     #appearances-nd {
         font-size: 50px;
-        color: #7a7a7a;
+        color: #fff;
+        font-weight: bold;
+        position: relative;
+        vertical-align: middle;
+        text-align: center;
+        padding-top: 10px;
+        padding-bottom: 0;
     }
 
     .dc-chart g.row text {
@@ -194,7 +212,8 @@ table {
     #years-nd,
     #appearances-nd {
         font-size: 60px;
-        color: #7a7a7a;
+        color: #fff;
+        font-weight: bold;
         position: relative;
         vertical-align: middle;
         text-align: center;
