--- a/Stream 2/Back End Development/Final Project/templates/layout.html
+++ b/Stream 2/Back End Development/Final Project/templates/layout.html
@@ -60,7 +60,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" id='step1' href="./">
+            <a class="navbar-brand" href="./">
                 <img alt="Graph" src="{{ url_for ('static', filename='favicon/favicon.ico') }}"> Avengers
                 Data Dashboard
             </a>
@@ -70,7 +70,7 @@
         <!-- Navbar Links -->
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="./" id="step2"><span class="glyphicon glyphicon-dashboard"></span> Dashboard</a></li>
+                <li><a href="./" id="step1"><span class="glyphicon glyphicon-dashboard"></span> Dashboard</a></li>
             </ul>
             <ul class="nav navbar-right">
                 <li>
