--- a/Stream 2/Back End Development/Final Project/templates/index.html
+++ b/Stream 2/Back End Development/Final Project/templates/index.html
@@ -13,7 +13,7 @@
 <!-- Content Begin -->
 {% block content %}
     <div class="col-sm-12">
-        <div class="row">
+        <div class="row-fluid">
             <!-- Year Menu Select Begin -->
             <div class="col-sm-4">
                 <div class="chart-wrapper text-center">
@@ -54,7 +54,7 @@
             <!-- URL Menu Select End -->
         </div>
 
-        <div class="row">
+        <div class="row-fluid">
             <!-- Gender Chart Begin -->
             <div class="col-sm-4">
                 <div class="chart-wrapper text-center">
@@ -109,7 +109,7 @@
             <!-- Appearances Number Display End -->
         </div>
 
-        <div class="row">
+        <div class="row-fluid">
             <!-- Year Chart Begin -->
             <div class="col-sm-6">
                 <div class="chart-wrapper text-center">
@@ -136,7 +136,8 @@
             </div>
             <!-- Current Bar Chart End -->
         </div>
-        <div class="row">
+
+        <div class="row-fluid">
             <!-- Table Data Begin -->
             <div class="col-sm-12">
                 <div class="chart-wrapper text-center">
@@ -152,6 +153,7 @@
             </div>
         </div>
         <!-- Table Data End -->
+
     </div>
 {% endblock %}
 <!-- content end -->
