--- a/Stream 2/Back End Development/Final Project/static/css/style.css
+++ b/Stream 2/Back End Development/Final Project/static/css/style.css
@@ -23,18 +23,18 @@
     padding-bottom: 35px;
 }
 
-/* content heading */
+/* Content heading */
 #content-heading {
     padding: 20px;
 }
 
-/* site headings */
+/* Site headings */
 #site-heading {
     text-align: center;
     font-size: 42px;
 }
 
-/* img style & properties */
+/* Img style & properties */
 #article-pic {
     float: left;
     width: 250px;
@@ -44,50 +44,6 @@
 
 article p {
     padding: 15px;
-}
-
-/*
- * Sidebar
- */
-
-/* Hide for mobile, show later */
-.sidebar {
-    display: none;
-}
-
-@media (min-width: 768px) {
-    .sidebar {
-        position: fixed;
-        top: 51px;
-        bottom: 0;
-        left: 0;
-        z-index: 1000;
-        display: block;
-        padding: 10px;
-        overflow-x: hidden;
-        overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-        background-color: #f5f5f5;
-        border-right: 1px solid #eee;
-    }
-}
-
-/* Sidebar navigation */
-.nav-sidebar {
-    margin-right: -11px; /* 20px padding + 1px border */
-    margin-bottom: 10px;
-    margin-left: -10px;
-}
-
-.nav-sidebar > li > a {
-    padding-right: 10px;
-    padding-left: 10px;
-}
-
-.nav-sidebar > .active > a,
-.nav-sidebar > .active > a:hover,
-.nav-sidebar > .active > a:focus {
-    color: #fff;
-    background-color: #428bca;
 }
 
 /*
@@ -109,6 +65,9 @@ article p {
     margin-top: 0;
 }
 
+/*
+ * Footer Content
+ */
 .footer {
     position: absolute;
     bottom: 0;
@@ -116,18 +75,4 @@ article p {
     /* Set the fixed height of the footer here */
     height: 60px;
     background-color: #f5f5f5;
-}
-
-/* Custom page CSS
--------------------------------------------------- */
-/* Not required for template or sticky footer method. */
-
-.container {
-    width: auto;
-    max-width: 680px;
-    padding: 0 15px;
-}
-
-.container .text-muted {
-    margin: 20px 0;
 }
