Huge code tidy, added comments, removed uneccesary/unused code and CSS, made sue to remove unused variables also made sure containers and rows were consitant in using row-fluid, container-fluid, etc.. TODO add bootstrap css responsive file then link in layout.html

--- a/Stream 2/Back End Development/Final Project/static/css/style.css
+++ b/Stream 2/Back End Development/Final Project/static/css/style.css
@@ -8,7 +8,7 @@
     height: 100%
 }
 
-#container {
+.container-fluid {
     /* Set a specified height, or the minimum height for the background image */
     min-height: 100%;
     /* Set background image to fixed (don't scroll along with the page) */
