--- a/Stream 2/Back End Development/Final Project/templates/layout.html
+++ b/Stream 2/Back End Development/Final Project/templates/layout.html
@@ -87,7 +87,7 @@
 <!-- Navigation end -->
 
 <!-- Content begin -->
-<div class="container-fluid">
+<div id="main-content" class="container-fluid">
     <div class="row-fluid">
 
         <!-- Custom Loading Screen & Loading Circle Begin-->
