--- a/Stream 2/Back End Development/Final Project/static/css/custom.css
+++ b/Stream 2/Back End Development/Final Project/static/css/custom.css
@@ -82,10 +82,9 @@
 /* Extra small devices (phones, etc. less than 768px) */
 /* No media query since this is the default in Bootstrap */
 /* So we will make our own custom to handle these devices */
-@media screen and (min-width: 278px) and (max-width: 768px) {
+@media screen and (min-width: 278px) and (max-width: 400px) {
     .container-fluid {
-        width: auto;
-        max-width: 100%;
+        width: 100%;
         margin: 0 auto;
     }
 
@@ -135,10 +134,9 @@
 }
 
 /* Small devices (tablets, etc.) */
-@media screen and (min-width: 768px) and (max-width: 992px) {
+@media screen and (min-width: 401px) and (max-width: 768px) {
     .container-fluid {
-        width: auto;
-        max-width: 100%;
+        width: 100%;
         margin: 0 auto;
     }
 
@@ -187,11 +185,10 @@
     }
 }
 
-/* Medium devices (desktops, 992px and up) */
-@media screen and (min-width: 992px) and (max-width: 1200px) {
+/* Medium devices (desktops, 769px and up) */
+@media screen and (min-width: 769px) and (max-width: 992px) {
     .container-fluid {
-        width: auto;
-        max-width: 100%;
+        width: 100%;
         margin: 0 auto;
     }
 
@@ -240,11 +237,10 @@
     }
 }
 
-/* Large devices (large desktops, 1200px and up) */
-@media screen and (min-width: 1200px) {
+/* Large devices (large desktops, 993px and up) */
+@media screen and (min-width: 993px) and (max-width: 1199px) {
     .container-fluid {
-        width: auto;
-        max-width: 100%;
+        width: 100%;
         margin: 0 auto;
     }
 
@@ -282,6 +278,58 @@
         padding: 6px 0;
         background: #C9302C;
         border-radius: 3px;
+        font-size: 18px;
+        color: #fff;
+        border: 1px solid transparent;
+    }
+
+    td, th {
+        border: 1px solid #000;
+        font-size: 18px;
+    }
+}
+
+/* Even larger devices (ott desktops, 1200px and up) */
+@media screen and (min-width: 1200px) {
+    .container-fluid {
+        width: 100%;
+        margin: 0 auto;
+    }
+
+    .container-fluid .text-muted {
+        margin: 24px 0;
+    }
+
+    #main-content {
+        padding-top: 40px;
+        padding-bottom: 60px;
+    }
+
+    #years-nd,
+    #appearances-nd {
+        font-size: 60px;
+        color: #fff;
+        font-weight: bold;
+        position: relative;
+        vertical-align: middle;
+        text-align: center;
+        padding-top: 14px;
+        padding-bottom: 0;
+    }
+
+    .dc-chart g.row text {
+        color: #7a7a7a;
+        font-size: 18px;
+    }
+
+    .dc-select-menu {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        vertical-align: middle;
+        padding: 8px 0;
+        background: #C9302C;
+        border-radius: 4px;
         font-size: 18px;
         color: #fff;
         border: 1px solid transparent;
