--- a/Stream 2/Back End Development/Final Project/templates/index.html
+++ b/Stream 2/Back End Development/Final Project/templates/index.html
@@ -12,149 +12,146 @@
 
 <!-- Content Begin -->
 {% block content %}
-    <div class="col-sm-12">
-        <div class="row-fluid">
-            <!-- Year Menu Select Begin -->
-            <div class="col-sm-4">
-                <div class="chart-wrapper text-center">
-                    <div class="chart-title">
-                        Years Menu Select
-                    </div>
-                    <div class="chart-stage text-center">
-                        <div id="year-menu-select" class="dc-select-menu"></div>
-                    </div>
+    <div class="row-fluid">
+        <!-- Year Menu Select Begin -->
+        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+            <div class="chart-wrapper text-center">
+                <div class="chart-title">
+                    Years Menu Select
                 </div>
-            </div>
-            <!-- Year Menu Select End -->
-
-            <!-- Avenger Name Select Begin -->
-            <div class="col-sm-4">
-                <div class="chart-wrapper text-center">
-                    <div class="chart-title">
-                        Name Menu Select
-                    </div>
-                    <div class="chart-stage text-center">
-                        <div id="name-menu-select" class="dc-select-menu"></div>
-                    </div>
-                </div>
-            </div>
-            <!-- Avenger Name Select End -->
-
-            <!-- URL Menu Select Begin -->
-            <div class="col-sm-4">
-                <div class="chart-wrapper text-center">
-                    <div class="chart-title">
-                        URL Menu Select
-                    </div>
-                    <div class="chart-stage text-center">
-                        <div id="url-menu-select" class="dc-select-menu"></div>
-                    </div>
-                </div>
-            </div>
-            <!-- URL Menu Select End -->
-        </div>
-
-        <div class="row-fluid">
-            <!-- Gender Chart Begin -->
-            <div class="col-sm-4">
-                <div class="chart-wrapper text-center">
-                    <div class="chart-title">
-                        Gender
-                    </div>
-                    <div class="chart-stage">
-                        <div id="gender-row-chart"></div>
-                    </div>
-                </div>
-            </div>
-            <!-- Gender Chart End -->
-
-            <!-- Honorary Chart Begin -->
-            <div class="col-sm-4">
-                <div class="chart-wrapper text-center">
-                    <div class="chart-title">
-                        Honorary Chart
-                    </div>
-                    <div class="chart-stage">
-                        <div id="honorary-pie-chart"></div>
-                    </div>
-                </div>
-            </div>
-            <!-- Honorary Chart End -->
-
-            <!-- Years Number Display Begin -->
-            <div class="col-sm-4">
-                <div class="chart-wrapper text-center">
-                    <div class="chart-title">
-                        Total Number of Years
-                    </div>
-                    <div class="chart-stage">
-
-                        <div id="years-nd"></div>
-                    </div>
-                </div>
-            </div>
-            <!-- Years Number Display End -->
-
-            <!-- Appearances Number Display Begin -->
-            <div class="col-sm-4">
-                <div class="chart-wrapper text-center">
-                    <div class="chart-title">
-                        Total Number of Appearances
-                    </div>
-                    <div class="chart-stage">
-                        <div id="appearances-nd"></div>
-                    </div>
-                </div>
-            </div>
-            <!-- Appearances Number Display End -->
-        </div>
-
-        <div class="row-fluid">
-            <!-- Year Chart Begin -->
-            <div class="col-sm-6">
-                <div class="chart-wrapper text-center">
-                    <div class="chart-title">
-                        Number of Years.
-                    </div>
-                    <div class="chart-stage">
-                        <div id="year-bar-chart"></div>
-                    </div>
-                </div>
-            </div>
-            <!-- Year Chart End -->
-
-            <!-- Current Bar Chart Begin -->
-            <div class="col-sm-6">
-                <div class="chart-wrapper text-center">
-                    <div class="chart-title">
-                        Current Status of Avenger
-                    </div>
-                    <div class="chart-stage">
-                        <div id="current-bar-chart"></div>
-                    </div>
-                </div>
-            </div>
-            <!-- Current Bar Chart End -->
-        </div>
-
-        <div class="row-fluid">
-            <!-- Table Data Begin -->
-            <div class="col-sm-12">
-                <div class="chart-wrapper text-center">
-                    <div class="chart-title">
-                        URL Table
-                    </div>
-                    <div class="chart-stage">
-                        <div class="table-wrapper">
-                            <div id="table-data"></div>
-                        </div>
-                    </div>
+                <div class="chart-stage text-center">
+                    <div id="year-menu-select" class="dc-select-menu"></div>
                 </div>
             </div>
         </div>
-        <!-- Table Data End -->
+        <!-- Year Menu Select End -->
 
+        <!-- Avenger Name Select Begin -->
+        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+            <div class="chart-wrapper text-center">
+                <div class="chart-title">
+                    Name Menu Select
+                </div>
+                <div class="chart-stage text-center">
+                    <div id="name-menu-select" class="dc-select-menu"></div>
+                </div>
+            </div>
+        </div>
+        <!-- Avenger Name Select End -->
+
+        <!-- URL Menu Select Begin -->
+        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+            <div class="chart-wrapper text-center">
+                <div class="chart-title">
+                    URL Menu Select
+                </div>
+                <div class="chart-stage text-center">
+                    <div id="url-menu-select" class="dc-select-menu"></div>
+                </div>
+            </div>
+        </div>
+        <!-- URL Menu Select End -->
     </div>
+
+    <div class="row-fluid">
+        <!-- Gender Chart Begin -->
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
+            <div class="chart-wrapper text-center">
+                <div class="chart-title">
+                    Gender
+                </div>
+                <div class="chart-stage">
+                    <div id="gender-row-chart"></div>
+                </div>
+            </div>
+        </div>
+        <!-- Gender Chart End -->
+
+        <!-- Honorary Chart Begin -->
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
+            <div class="chart-wrapper text-center">
+                <div class="chart-title">
+                    Honorary Chart
+                </div>
+                <div class="chart-stage">
+                    <div id="honorary-pie-chart"></div>
+                </div>
+            </div>
+        </div>
+        <!-- Honorary Chart End -->
+
+        <!-- Years Number Display Begin -->
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+            <div class="chart-wrapper text-center">
+                <div class="chart-title">
+                    Total Number of Years
+                </div>
+                <div class="chart-stage">
+
+                    <div id="years-nd"></div>
+                </div>
+            </div>
+        </div>
+        <!-- Years Number Display End -->
+
+        <!-- Appearances Number Display Begin -->
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+            <div class="chart-wrapper text-center">
+                <div class="chart-title">
+                    Total Number of Appearances
+                </div>
+                <div class="chart-stage">
+                    <div id="appearances-nd"></div>
+                </div>
+            </div>
+        </div>
+        <!-- Appearances Number Display End -->
+    </div>
+
+    <div class="row-fluid">
+        <!-- Year Chart Begin -->
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+            <div class="chart-wrapper text-center">
+                <div class="chart-title">
+                    Number of Years.
+                </div>
+                <div class="chart-stage">
+                    <div id="year-bar-chart"></div>
+                </div>
+            </div>
+        </div>
+        <!-- Year Chart End -->
+
+        <!-- Current Bar Chart Begin -->
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+            <div class="chart-wrapper text-center">
+                <div class="chart-title">
+                    Current Status of Avenger
+                </div>
+                <div class="chart-stage">
+                    <div id="current-bar-chart"></div>
+                </div>
+            </div>
+        </div>
+        <!-- Current Bar Chart End -->
+    </div>
+
+    <div class="row-fluid">
+        <!-- Table Data Begin -->
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            <div class="chart-wrapper text-center">
+                <div class="chart-title">
+                    URL Table
+                </div>
+                <div class="chart-stage">
+                    <div class="table-wrapper">
+                        <div id="table-data"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Table Data End -->
 {% endblock %}
 <!-- content end -->
 
