Finished Challenge for lesson 2 part 3

--- a/Stream 3/Full Stack Development/2. Hello Django Templates/3. Template Inheritance/challenge_solution/MenuTest/sitepages/templates/about.html
+++ b/Stream 3/Full Stack Development/2. Hello Django Templates/3. Template Inheritance/challenge_solution/MenuTest/sitepages/templates/about.html
@@ -3,5 +3,7 @@
 <!-- Content Begin -->
 {% block content %}
     <h1>{{ about_page }}</h1>
+
+    <p>{{ site_description }}</p>
 {% endblock %}
 <!-- Content End -->
