--- a/Stream 3/Full Stack Development/2. Hello Django Templates/3. Template Inheritance/challenge_solution/MenuTest/sitepages/templates/contact.html
+++ b/Stream 3/Full Stack Development/2. Hello Django Templates/3. Template Inheritance/challenge_solution/MenuTest/sitepages/templates/contact.html
@@ -3,5 +3,11 @@
 <!-- Content Begin -->
 {% block content %}
     <h1>{{ contact_page }}</h1>
+
+    <h2>{{ full_name }}</h2>
+    <p>Title: {{ role_title }}</p>
+    <p>Tel: {{ telephone }}</p>
+    <p>Email: {{ email }}</p>
+    <p><button><a href="mailto:gunnerjnr@live.co.uk">{{ button_text }}</a></button></p>
 {% endblock %}
 <!-- Content End -->
