--- a/Stream 3/Full Stack Development/2. Hello Django Templates/3. Template Inheritance/challenge_solution/MenuTest/sitepages/templates/home.html
+++ b/Stream 3/Full Stack Development/2. Hello Django Templates/3. Template Inheritance/challenge_solution/MenuTest/sitepages/templates/home.html
@@ -3,5 +3,6 @@
 <!-- Content Begin -->
 {% block content %}
     <h1>{{ home_page }}</h1>
+    <p>Today is {{ day_of_week }} {{ date_today }}</p>
 {% endblock %}
 <!-- Content End -->
