Updated colour for numberND and YearND

--- a/Stream 2/Back End Development/Final Project/static/css/custom.css
+++ b/Stream 2/Back End Development/Final Project/static/css/custom.css
@@ -100,7 +100,7 @@
     #years-nd,
     #appearances-nd {
         font-size: 30px;
-        color: #fff;
+        color: #C9302C;
         font-weight: bold;
         position: relative;
         vertical-align: middle;
@@ -152,7 +152,7 @@
     #years-nd,
     #appearances-nd {
         font-size: 40px;
-        color: #fff;
+        color: #C9302C;
         font-weight: bold;
         position: relative;
         vertical-align: middle;
@@ -204,7 +204,7 @@
     #years-nd,
     #appearances-nd {
         font-size: 50px;
-        color: #fff;
+        color: #C9302C;
         font-weight: bold;
         position: relative;
         vertical-align: middle;
@@ -256,7 +256,7 @@
     #years-nd,
     #appearances-nd {
         font-size: 60px;
-        color: #fff;
+        color: #C9302C;
         font-weight: bold;
         position: relative;
         vertical-align: middle;
@@ -308,7 +308,7 @@
     #years-nd,
     #appearances-nd {
         font-size: 60px;
-        color: #fff;
+        color: #C9302C;
         font-weight: bold;
         position: relative;
         vertical-align: middle;
